add task for highLevelDataSetup