@@ -92,6 +92,12 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
     from javadoc.destinationDir
 }
 
+task highLevelDataSetup(type: JavaExec) {
+    main = "uk.gov.hmcts.cmc.HighLevelDataSetupApp"
+    classpath += sourceSets.main.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 artifacts {
     archives sourcesJar
     archives javadocJar
